<resources>
    <string name="app_name">Reserve</string>
    <string name="enter">Enter</string>
    <string name="welcome_to_reserve">Welcome to Reserve</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="reserve">Reserve</string>
    <string name="move_map_instruction">Move map to place\nmarker at desired location</string>
    <string name="accessToken">sk.eyJ1IjoiY2oyNHk1b3pwMDA2cDMybGVsNm14bTZwcSIsImEiOiJjajI1MDVmbzMwMDQ1MnhwamIxNDZwdnk1In0.tpCdxuNziZzhcfJF3h0kMA</string>
    <string name="select_a_location">Select a location</string>
    <string name="search_location">Search Location</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_table_describe">Obviously much depends on what you actually order, but a recent study has revealed most meals at more refined establishments only contain marginally less calories, fat and sodium than anything you’d find on a fast food menu.</string>
    <string name="available">Available:</string>
    <string name="coming_soon">Coming soon</string>
    <string name="start_search">Start Search</string>
    <string name="menu_item_request">Request</string>
    <string name="menu_item_history">History</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_sing_out">Sing out</string>
    <string name="please_select_item">Please, select item</string>
    <string name="additional_features">ADDITIONAL FEATURES</string>
    <string name="note_from_client">NOTE FROM CLIENT</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact us</string>
    <string name="guests">Guests</string>
    <string name="distance">Distance</string>
    <string name="discount">Discount</string>
    <string name="taxi">Taxi</string>
    <string name="welcome_drink">Welcome Drink</string>
    <string name="version">Version</string>
    <string name="application_info">Application info</string>
    <string name="rate_this_app">Rate this app on Google Play</string>
    <string name="account_info">Account info</string>
    <string name="phone_number">Phone number</string>
    <string name="_169_binocle">© Binocle</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="ordered">ORDERED</string>
    <string name="waiting_confirmation">Waiting for confirmation...</string>
    <string name="reserved">Reserved</string>
    <string name="do_you_really_want_to_cancel_your_request">Do you really want to cancel your request?</string>
    <string name="done">Done</string>
    <string name="message_correct_number">Please, input valid number</string>
    <string name="input">Input</string>
    <string name="order">ORDER</string>
    <string name="orders">ORDERS</string>
    <string name="offline">offline</string>
    <string name="online">online</string>

</resources>
